samples/_failures_safe/1761799544_dd7410_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_39c62e2c.c: In function ‘main’:
./samples/SAFE/__tmp_39c62e2c.c:144:5: error: expected declaration or statement at end of input
  144 |     display_logs_recursive(entries, count, 0, filter_level);
      |     ^~~~~~~~~~~~~~~~~~~~~~
